; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/cpp/extr_unix.c_basepath.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/cpp/extr_unix.c_basepath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c".\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @basepath(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i8* @strrchr(i8* %6, i8 signext 47)
  store i8* %7, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %26

9:                                                ; preds = %1
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %2, align 8
  %12 = ptrtoint i8* %10 to i64
  %13 = ptrtoint i8* %11 to i64
  %14 = sub i64 %12, %13
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %5, align 4
  %16 = load i8*, i8** %2, align 8
  %17 = bitcast i8* %16 to i32*
  %18 = load i32, i32* %5, align 4
  %19 = add nsw i32 %18, 1
  %20 = call i64 @newstring(i32* %17, i32 %19, i32 0)
  %21 = inttoptr i64 %20 to i8*
  store i8* %21, i8** %3, align 8
  %22 = load i8*, i8** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8, i8* %22, i64 %24
  store i8 0, i8* %25, align 1
  br label %26

26:                                               ; preds = %9, %1
  %27 = load i8*, i8** %3, align 8
  ret i8* %27
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i64 @newstring(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
